force-app/main/default/objects/Expense__c/fields/All_Approved__c.field-meta.xml
<CustomField>
    <fullName>All_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Approved?</label>
    <type>Checkbox</type>
</CustomField>